--- a/Mobile UL Kit 02/index.html
+++ b/Mobile UL Kit 02/index.html
@@ -10,24 +10,24 @@
     <title>Mobile UL/screens</title>
 </head>
 <body>
-    <div class="w-[390px] h-[873px] m-auto bg-neutral-900 mt-8 mb-5 rounded-[25px] border-[5px] border-[#d0d0d0]">
+    <div class="w-[390px] h-[873px] m-auto bg-neutral-900 mt-5 mb-5 rounded-[25px] border-[5px] border-[#d0d0d0]">
         <header>
             <div class="w-[358px] flex justify-between absolute mt-4">
                 <div>
-                    <img src="./img/Left Side.png" alt="" class="ml-5">
+                    <img src="./images/Left Side.png" alt="" class="ml-5">
                 </div>
 
                 <div class="w-[200px] h-8 bg-[#d0d0d0] rounded-b-[30px] mt-[-17px] "></div>
 
                 <div class="grid grid-cols-3 ">
-                    <img src="./img/Mobile Signal.png" alt="">
-                    <img src="./img/Wifi.png" alt="">
-                    <img src="./img/Battery.png" alt="">
+                    <img src="./images/Mobile Signal.png" alt="">
+                    <img src="./images/Wifi.png" alt="">
+                    <img src="./images/Battery.png" alt="">
                 </div>
             </div>
         </header>
         <div class="w-[358px] m-auto grid justify-center align-center">
-            <img src="./img/Frame 1210.png" alt="" class="mt-32">
+            <img src="./images/Frame 1210.png" alt="" class="mt-32">
         </div>
 
         <div class="w-[358px] m-auto text-white flex justify-around text-[16px] mt-10">
@@ -47,7 +47,7 @@
         </div>
 
         <div class="w-[358px] m-auto mt-10">
-            <img src="./img/check_box_outline_blank.png" alt="" class="inline-block absolute">
+            <img src="./images/check_box_outline_blank.png" alt="" class="inline-block absolute">
             <p class="text-[#f4f4f4] text-[14px] inline-block ml-10 mt-[-3px]">I do not wish to recieve email marketing <br> updates from GAGA</p>
         </div>
 
