mobile ul kit five

--- a/Mobile UL Kit 05/index.html
+++ b/Mobile UL Kit 05/index.html
@@ -13,19 +13,19 @@
     <!--=========== /Title ===========-->
 </head>
 <body>
-    <div class="w-[390px] h-[873px] m-auto bg-neutral-900 mt-8 mb-5 rounded-[25px] border-[5px] border-[#d0d0d0]">
+    <div class="w-[390px] h-[873px] m-auto bg-neutral-900 mt-5 mb-5 rounded-[25px] border-[5px] border-[#d0d0d0]">
         <header>
             <div class="w-[358px] flex justify-between absolute mt-4">
                 <div>
-                    <img src="./img/Left Side (2).png" alt="" class="ml-5">
+                    <img src="./images/Left Side.png" alt="" class="ml-5">
                 </div>
 
                 <div class="w-[200px] h-8 bg-[#d0d0d0] rounded-b-[30px] mt-[-17px] "></div>
 
                 <div class="grid grid-cols-3 ">
-                    <img src="./img/Mobile Signal (2).png" alt="">
-                    <img src="./img/Wifi (1).png" alt="">
-                    <img src="./img/Battery (1).png" alt="">
+                    <img src="./images/Mobile Signal.png" alt="">
+                    <img src="./images/Wifi.png" alt="">
+                    <img src="./images/Battery.png" alt="">
                 </div>
             </div>
         </header>
