--- a/Mobile UL Kit 08/index.html
+++ b/Mobile UL Kit 08/index.html
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta tages -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Tailwind css -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Title -->
     <title>Mobile UL/screens</title>
 </head>
 <body>
-    
+    <div class="w-[390px] h-[873px] m-auto bg-neutral-900 mt-5 mb-5 rounded-[25px] border-[5px] border-[#d0d0d0]">
+        <header>
+            <div class="w-[358px] flex justify-between mt-4">
+                <div>
+                    <img src="./images/Left Side.png" alt="Left Side image" class="ml-5">
+                </div>
+
+                <div class="w-[200px] h-8 bg-[#d0d0d0] rounded-b-[30px] mt-[-17px] "></div>
+
+                <div class="grid grid-cols-3 ">
+                    <img src="./images/Mobile Signal.png" alt="Mobile Signal image">
+                    <img src="./images/Wifi.png" alt="Wifi image">
+                    <img src="./images/Battery.png" alt="Battery image">
+                </div>
+            </div>
+        </header>
+        <section class="w-[358px] m-auto">
+            <div class="mt-16">
+                <img src="./images/keyboard_backspace.png" alt="Arrow blck image">
+            </div>
+        </section>
+        <div class="mt-3">
+            <h1 class="text-[48px] text-white font-bold absolute leading-[40px] ml-[105px] mt-[150px] font-[Pridi]">Joseph <br> Dickson</h1>
+            <img src="./images/Rectangle 304.png" alt="">
+        </div>
+    </div>
 </body>
 </html>
