mobile ul kit 08

--- a/Mobile UL Kit 08/index.html
+++ b/Mobile UL Kit 08/index.html
@@ -31,10 +31,25 @@
                 <img src="./images/keyboard_backspace.png" alt="Arrow blck image">
             </div>
         </section>
-        <div class="mt-3">
-            <h1 class="text-[48px] text-white font-bold absolute leading-[40px] ml-[105px] mt-[150px] font-[Pridi]">Joseph <br> Dickson</h1>
-            <img src="./images/Rectangle 304.png" alt="">
-        </div>
+        <section>
+            <div class="mt-3">
+                <h1 class="text-[48px] text-white font-bold absolute leading-[40px] ml-[105px] mt-[150px] font-[Pridi]">Joseph <br> Dickson</h1>
+                <img src="./images/Rectangle 304.png" alt="">
+            </div>
+            <div class="w-[358px] m-auto mt-[15px]">
+                <p class="text-[20px] text-white font-bold">About</p>
+                <p class="text-[15px] text-white font-notmal font-['Proxima Nova'] leading-[22px] mt-[7px]">Lorem ipsum dolor sit amet, consectetur adipiscing <br> elit. Ornare lacus enim enim tincidunt. Dictumst <br> duis volutpat maecenas sed purus at <br> tellus at. Purus magna lacus. </p>
+            </div>
+            <div class="w-[358px] m-auto mt-[30px]">
+                <p class="text-[20px] text-white font-bold">Classes</p>
+                <div>
+                    <p>10 min</p>
+                    <p>25 min</p>
+                    <p>40 min</p>
+                    <p>60 min</p>
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 </html>
