mobile ul kit 08 finish

--- a/Mobile UL Kit 08/index.html
+++ b/Mobile UL Kit 08/index.html
@@ -42,13 +42,21 @@
             </div>
             <div class="w-[358px] m-auto mt-[30px]">
                 <p class="text-[20px] text-white font-bold">Classes</p>
-                <div>
+                <div class="text-white text-[14px] flex justify-around mt-[30px]">
                     <p>10 min</p>
                     <p>25 min</p>
                     <p>40 min</p>
                     <p>60 min</p>
                 </div>
+                <div class="mt-[5px]">
+                    <img src="./images/Line 157.png" alt="">
+                </div>
             </div>
+            <footer class="mt-[11px]">
+                <div>
+                    <img src="./images/Rectangle 305.png" alt="" class="rounded-b-[20px]">
+                </div>
+            </footer>
         </section>
     </div>
 </body>
