--- a/Mobile UL Kit 09/index.html
+++ b/Mobile UL Kit 09/index.html
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mobile UL/screens</title>
+     <!--=========== Meta tages ===========-->
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <!--=========== /Meta tages ===========-->
+     <!--=========== Tailwind css ===========-->
+     <script src="https://cdn.tailwindcss.com"></script>
+     <!--=========== /Tailwind css ===========-->
+     <!--=========== Title ===========-->
+     <title>Mobile UL/screens</title>
+     <!--=========== /Title ===========-->
 </head>
 <body>
-    
+    <div class="w-[390px] h-[873px] m-auto bg-neutral-900 mt-5 mb-5 rounded-[25px] border-[5px] border-[#d0d0d0]">
+        <header>
+            <div class="w-[358px] flex justify-between mt-4">
+                <div>
+                    <img src="./images/Left Side.png" alt="Left Side image" class="ml-5">
+                </div>
+
+                <div class="w-[200px] h-8 bg-[#d0d0d0] rounded-b-[30px] mt-[-17px] "></div>
+
+                <div class="grid grid-cols-3 ">
+                    <img src="./images/Mobile Signal.png" alt="Mobile Signal image">
+                    <img src="./images/Wifi.png" alt="Wifi image">
+                    <img src="./images/Battery.png" alt="Battery image">
+                </div>
+            </div>
+        </header>
+        <section>
+            <div class="w-[358px] m-auto mt-[30px]">
+                <p class="text-[20px] text-white font-bold">Classes</p>
+                <div class="text-white text-[14px] flex justify-around mt-[30px]">
+                    <p>10 min</p>
+                    <p>25 min</p>
+                    <p>40 min</p>
+                    <p>60 min</p>
+                </div>
+                <div class="mt-[5px]">
+                    <img src="./images/Line 157.png" alt="">
+                </div>
+            </div>
+            <footer class="mt-[11px]">
+                <div>
+                    <img src="./images/Rectangle 305.png" alt="" class="rounded-b-[20px]">
+                </div>
+            </footer>
+        </section>
+    </div>
 </body>
 </html>
