--- a/Mobile UL Kit 09/index.html
+++ b/Mobile UL Kit 09/index.html
@@ -29,6 +29,12 @@
                 </div>
             </div>
         </header>
+        <section class="w-[358px] m-auto">
+            <div class="mt-10 flex">
+                <img src="./images/keyboard_backspace.png" alt="Arrow blck image">
+                <p class="text-[14px] text-white font-notmal uppercase ml-[20px]">cardio studio</p>
+            </div>
+        </section>
         <section>
             <div class="w-[358px] m-auto mt-[30px]">
                 <p class="text-[20px] text-white font-bold">Classes</p>
