--- a/Mobile UL Kit 09/index.html
+++ b/Mobile UL Kit 09/index.html
@@ -12,7 +12,7 @@
      <title>Mobile UL/screens</title>
      <!--=========== /Title ===========-->
 </head>
-<body>
+<body class="text['Proxima Nova']">
     <div class="w-[390px] h-[873px] m-auto bg-neutral-900 mt-5 mb-5 rounded-[25px] border-[5px] border-[#d0d0d0]">
         <header>
             <div class="w-[358px] flex justify-between mt-4">
@@ -35,9 +35,34 @@
                 <p class="text-[14px] text-white font-notmal uppercase ml-[20px]">cardio studio</p>
             </div>
         </section>
+        <section class="w-[358px] m-auto mt-[25px]">
+            <p class="text-white text-[20px] font-bold">What to expect</p>
+            <p class="text-white font-notmal text-[16px] mt-[5px]">This series of training is designed for those who <br> are professional and experienced. Let’s roll!</p>
+
+            <div class="mt-[30px]">
+                <p class="text-white text-[20px] font-bold">Cardio trainers</p>
+            </div>
+        </section>
         <section>
-            <div class="w-[358px] m-auto mt-[30px]">
-                <p class="text-[20px] text-white font-bold">Classes</p>
+            <div class="flex justify-between ml-[10px] mt-[15px]">
+                <div>
+                    <img src="./images/Ellipse 174.png" alt="">
+                    <p class="text-[13px] text-white uppercase ml-[25px] mt-[6px]">john wick</p>
+                </div>
+                <div>
+                    <img src="./images/Ellipse 174 (1).png" alt="">
+                    <p class="text-[13px] text-white uppercase ml-[25px] mt-[6px]">tim cass</p>
+                </div>
+                <div>
+                    <img src="./images/Ellipse 174 (2).png" alt="">
+                    <p class="text-[13px] text-white uppercase ml-[25px] mt-[6px]">zedd no</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="w-[358px] m-auto">
+            <div class="w-[358px] m-auto mt-[35px]">
+                <p class="text-[20px] text-white font-bold">All classes</p>
                 <div class="text-white text-[14px] flex justify-around mt-[30px]">
                     <p>10 min</p>
                     <p>25 min</p>
@@ -48,9 +73,20 @@
                     <img src="./images/Line 157.png" alt="">
                 </div>
             </div>
-            <footer class="mt-[11px]">
+            <div class="flex mt-[20px]">
+                <p class="text-[12px] font-notmal text-white uppercase">sort by: <span class="text-[#32494c]">highest ratings</span></p>
+                <img src="./images/Vector (5).png" alt="" class="ml-[10px] w-[12px] h-[7px] mt-[6px]">
+            </div>
+            <div class="mt-[10px]">
+                <img src="./images/Frame 1235.png" alt="">
+            </div>
+            <footer class="mt-[10px]">
                 <div>
-                    <img src="./images/Rectangle 305.png" alt="" class="rounded-b-[20px]">
+                    <div class="flex justify-between">
+                        <img src="./images/Frame 1233 (2).png" alt="" class="absolute mt-[16px] ml-[15px]">
+                        <img src="./images/heart_outline.png" alt="" class="absolute mt-[20px] ml-[335px]">
+                    </div>
+                    <img src="./images/Rectangle 306.png" alt="" class="">
                 </div>
             </footer>
         </section>
