--- a/Mobile UL Kit 11/index.html
+++ b/Mobile UL Kit 11/index.html
@@ -1,11 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mobile UL/screens</title>
+     <!--=========== Meta tages ===========-->
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <!--=========== /Meta tages ===========-->
+     <!--=========== Tailwind css ===========-->
+     <script src="https://cdn.tailwindcss.com"></script>
+     <!--=========== /Tailwind css ===========-->
+     <!--=========== Title ===========-->
+     <title>Mobile UL/screens</title>
+     <!--=========== /Title ===========-->
 </head>
-<body>
-    
+<body class="text['Proxima Nova']">
+    <div class="w-[390px] h-[873px] m-auto bg-neutral-900 mt-5 mb-5 rounded-[25px] border-[5px] border-[#d0d0d0]">
+        <header>
+            <div class="w-[358px] flex justify-between mt-4">
+                <div>
+                    <img src="./images/Left Side.png" alt="Left Side image" class="ml-5">
+                </div>
+
+                <div class="w-[200px] h-8 bg-[#d0d0d0] rounded-b-[30px] mt-[-17px]"></div>
+
+                <div class="grid grid-cols-3 ">
+                    <img src="./images/Mobile Signal.png" alt="Mobile Signal image">
+                    <img src="./images/Wifi.png" alt="Wifi image">
+                    <img src="./images/Battery.png" alt="Battery image">
+                </div>
+            </div>
+        </header>
+        <section class="w-[358px] m-auto mt-10">
+            <div class="flex justify-between">
+                <img src="./images/keyboard_backspace.png" alt="Arrow blck image">
+                <img src="./images/share.png" alt="">
+            </div>
+        </section>
+        <hr class="bg-[#ffffff] mt-[18px]">
+        <section class="w-[358px] m-auto">
+            <div class="mt-[20px] flex justify-between">
+                <p class="text-white text-[16px] font-notmal">Duration</p>
+                <img src="./images/Vector (6).png" alt="" class="mt-[5px] w-[11px] h-[7px]">
+            </div>
+            <hr class="bg-[#333] mt-[15px] opacity-[0.3]">
+
+            <div class="mt-[20px] flex justify-between">
+                <p class="text-white text-[16px] font-notmal">Studio</p>
+                <img src="./images/Vector (6).png" alt="" class="mt-[5px] w-[11px] h-[7px]">
+            </div>
+            <hr class="bg-[#333] mt-[15px] opacity-[0.3]">
+
+            <div class="mt-[20px] flex justify-between">
+                <p class="text-white text-[16px] font-notmal">Class level</p>
+                <img src="./images/Vector (7).png" alt="" class="mt-[5px] w-[11px] h-[7px]">
+            </div>
+            <hr class="bg-[#333] mt-[15px] opacity-[0.3]">
+
+            <div class="mt-[20px]">
+                <div class="flex gap-[15px]">
+                    <button class="w-[87px] h-[30px] bg-neutral-900 border-[1px] border-[#ffffff] text-white text-[14px] font-notmal rounded-[60px]">Entry level</button>
+                    <button class="w-[78px] h-[30px] bg-neutral-900 border-[1px] border-[#ffffff] text-white text-[14px] font-notmal rounded-[60px]">Beginner</button>
+                    <button class="w-[101px] h-[30px] bg-neutral-900 border-[1px] border-[#ffffff] text-white text-[14px] font-notmal rounded-[60px]">Intermediate</button>
+                </div>
+                <div class="flex gap-[15px] mt-[20px]">
+                    <button class="w-[85px] h-[30px] bg-neutral-900 border-[1px] border-[#ffffff] text-white text-[14px] font-notmal rounded-[60px]">Advanced</button>
+                    <button class="w-[78px] h-[30px] bg-neutral-900 border-[1px] border-[#ffffff] text-white text-[14px] font-notmal rounded-[60px]">All levels</button>
+                </div>
+            </div>
+
+            <div class="mt-[40px] flex justify-between">
+                <p class="text-white text-[16px] font-notmal">Class type</p>
+                <img src="./images/Vector (6).png" alt="" class="mt-[5px] w-[11px] h-[7px]">
+            </div>
+            <hr class="bg-[#333] mt-[15px] opacity-[0.3]">
+
+            <div class="mt-[20px] flex justify-between">
+                <p class="text-white text-[16px] font-notmal">Taget area</p>
+                <img src="./images/Vector (6).png" alt="" class="mt-[5px] w-[11px] h-[7px]">
+            </div>
+            <hr class="bg-[#333] mt-[15px] opacity-[0.3]">
+
+            <div class="mt-[20px] flex justify-between">
+                <p class="text-white text-[16px] font-notmal">Target body part</p>
+                <img src="./images/Vector (6).png" alt="" class="mt-[5px] w-[11px] h-[7px]">
+            </div>
+            <hr class="bg-[#333] mt-[15px] opacity-[0.3]">
+
+            <div class="mt-[20px] flex justify-between">
+                <p class="text-white text-[16px] font-notmal">Equipment</p>
+                <img src="./images/Vector (6).png" alt="" class="mt-[5px] w-[11px] h-[7px]">
+            </div>
+            <hr class="bg-[#333] mt-[15px] opacity-[0.3]">
+
+            <div class="mt-[20px] flex justify-between">
+                <p class="text-white text-[16px] font-notmal">Music</p>
+                <img src="./images/Vector (6).png" alt="" class="mt-[5px] w-[11px] h-[7px]">
+            </div>
+            <hr class="bg-[#333] mt-[15px] opacity-[0.3]">
+        </section>
+
+        <footer>
+            <div class="w-[358px] m-auto mt-[80px]">
+                <button class="w-[358px] h-[44px] bg-[#3a595d] rounded-[60px] text-white">Show all results</button>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
