--- a/Mobile UL Kit 12/index.html
+++ b/Mobile UL Kit 12/index.html
@@ -1,11 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mobile UL/screens</title>
+     <!--=========== Meta tages ===========-->
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <!--=========== /Meta tages ===========-->
+     <!--=========== Tailwind css ===========-->
+     <script src="https://cdn.tailwindcss.com"></script>
+     <!--=========== /Tailwind css ===========-->
+     <!--=========== Title ===========-->
+     <title>Mobile UL/screens</title>
+     <!--=========== /Title ===========-->
 </head>
-<body>
-    
+<body class="text['Proxima Nova']">
+    <div class="w-[390px] h-[873px] m-auto bg-neutral-900 mt-5 mb-5 rounded-[25px] border-[5px] border-[#d0d0d0]">
+        <header>
+            <div class="w-[358px] flex justify-between mt-4">
+                <div>
+                    <img src="./images/Left Side.png" alt="Left Side image" class="ml-5">
+                </div>
+
+                <div class="w-[200px] h-8 bg-[#d0d0d0] rounded-b-[30px] mt-[-17px]"></div>
+
+                <div class="grid grid-cols-3 ">
+                    <img src="./images/Mobile Signal.png" alt="Mobile Signal image">
+                    <img src="./images/Wifi.png" alt="Wifi image">
+                    <img src="./images/Battery.png" alt="Battery image">
+                </div>
+            </div>
+        </header>
+        <section class="w-[358px] m-auto">
+            <div class="mt-10 flex">
+                <img src="./images/keyboard_backspace.png" alt="Arrow blck image">
+                <p class="text-[14px] text-white font-notmal uppercase ml-[20px] tracking-[1.5px]">filter classes</p>
+            </div>
+        </section>
+
+        <section class="mt-[20px]">
+                <div class="w-full h-[58px] bg-[#525252]">
+                    <p class="text-[16px] text-white leading-[15px] ml-[16px] mt-[10px] absolute">Intro <br> <span class="text-[14px] font-notmal">20s</span></p>
+                </div>
+                <div class="w-full h-[58px] bg-[#525252] w-[358px] m-auto">
+                    <div class="w-[358px] m-auto flex justify-between">
+                        <p class="text-[16px] text-white leading-[15px] mt-[10px]">Warm up <br> <span class="text-[14px] font-notmal">1min 30s</span></p>
+                        <img src="./images/Vector (6).png" alt="" class="w-[11px] h-[7px] mt-[20px]">
+                    </div>
+                </div>
+        </section>
+    </div>
 </body>
 </html>
