--- a/Mobile UL Kit 12/index.html
+++ b/Mobile UL Kit 12/index.html
@@ -43,8 +43,65 @@
                 <div class="w-full h-[58px] bg-[#525252] w-[358px] m-auto">
                     <div class="w-[358px] m-auto flex justify-between">
                         <p class="text-[16px] text-white leading-[15px] mt-[10px]">Warm up <br> <span class="text-[14px] font-notmal">1min 30s</span></p>
-                        <img src="./images/Vector (6).png" alt="" class="w-[11px] h-[7px] mt-[20px]">
+                        <img src="./images/Vector (7).png" alt="" class="w-[11px] h-[7px] mt-[20px]">
                     </div>
+                </div>
+                <div class="text-[#ffffff] flex w-[358px] m-auto mt-[30px] justify-between">
+                    <div class="flex">
+                        <div class="w-[5px] h-[5px] rounded-full bg-[#ffffff] mt-[10px] ml-[10px]"></div>
+                        <p class="ml-[10px]">Slow Walkout / Overhead Reach</p>
+                    </div>
+                    <div>
+                        <p class="text-white">30s</p>
+                    </div>
+                </div>
+                <hr class="w-[358px] m-auto mt-[25px] opacity-[0.3]">
+
+                <div class="text-[#ffffff] flex w-[358px] m-auto mt-[30px] justify-between">
+                    <div class="flex">
+                        <div class="w-[5px] h-[5px] rounded-full bg-[#ffffff] mt-[10px] ml-[10px]"></div>
+                        <p class="ml-[10px]">Dynamic Spiderman</p>
+                    </div>
+                    <div>
+                        <p class="text-white">30s</p>
+                    </div>
+                </div>
+                <hr class="w-[358px] m-auto mt-[25px] opacity-[0.3]">
+
+                <div class="text-[#ffffff] flex w-[358px] m-auto mt-[30px] justify-between">
+                    <div class="flex">
+                        <div class="w-[5px] h-[5px] rounded-full bg-[#ffffff] mt-[10px] ml-[10px]"></div>
+                        <p class="ml-[10px]">Squat With Reach & Rotation</p>
+                    </div>
+                    <div>
+                        <p class="text-white">30s</p>
+                    </div>
+                </div>
+
+                <div class="w-full h-[58px] bg-[#3a595d] mt-[20px]">
+                    <p class="text-[16px] text-white leading-[15px] ml-[16px] mt-[10px] absolute">Rest <br> <span class="text-[14px] font-notmal">30s</span></p>
+                </div>
+
+                <div class="w-full h-[58px] bg-[#525252] w-[358px] m-auto">
+                    <div class="w-[358px] m-auto flex justify-between">
+                        <p class="text-[16px] text-white leading-[15px] mt-[10px]">Workout <br> <span class="text-[14px] font-notmal">5min 50s</span></p>
+                        <img src="./images/Vector (6).png" alt="" class="w-[11px] h-[7px] mt-[25px]">
+                    </div>
+                </div>
+
+                <div class="w-full h-[58px] bg-[#3a595d]">
+                    <p class="text-[16px] text-white leading-[15px] ml-[16px] mt-[10px] absolute">Rest <br> <span class="text-[14px] font-notmal">30s</span></p>
+                </div>
+
+                <div class="w-full h-[58px] bg-[#525252] w-[358px] m-auto">
+                    <div class="w-[358px] m-auto flex justify-between">
+                        <p class="text-[16px] text-white leading-[15px] mt-[10px]">Stretch <br> <span class="text-[14px] font-notmal">5min 00s</span></p>
+                        <img src="./images/Vector (6).png" alt="" class="w-[11px] h-[7px] mt-[25px]">
+                    </div>
+                </div>
+
+                <div class="w-full h-[58px] bg-[#3a595d]">
+                    <p class="text-[16px] text-white leading-[15px] ml-[16px] mt-[10px] absolute">Wrap up <br> <span class="text-[14px] font-notmal">30s</span></p>
                 </div>
         </section>
     </div>
