mobile ul kit 13 finish

--- a/Mobile UL Kit 13/index.html
+++ b/Mobile UL Kit 13/index.html
@@ -13,95 +13,95 @@
      <!--=========== /Title ===========-->
 </head>
 <body class="text['Proxima Nova']">
-    <div class="w-[390px] h-[873px] m-auto bg-neutral-900 mt-5 mb-5 rounded-[25px] border-[5px] border-[#d0d0d0]">
+    <div class="w-[390px] h-[873px] m-auto bg-[#ffffff] mt-5 mb-5 rounded-[25px] border-[5px] border-[#d0d0d0]">
         <header>
             <div class="w-[358px] flex justify-between mt-4">
                 <div>
-                    <img src="./images/Left Side.png" alt="Left Side image" class="ml-5">
+                    <img src="./images/9_41.png" alt="Left Side image" class="ml-5">
                 </div>
 
                 <div class="w-[200px] h-8 bg-[#d0d0d0] rounded-b-[30px] mt-[-17px]"></div>
 
-                <div class="grid grid-cols-3 ">
-                    <img src="./images/Mobile Signal.png" alt="Mobile Signal image">
-                    <img src="./images/Wifi.png" alt="Wifi image">
-                    <img src="./images/Battery.png" alt="Battery image">
+                <div class="grid grid-cols-3 gap-[5px]">
+                    <img src="./images/Mobile Signal (3).png" alt="Mobile Signal image">
+                    <img src="./images/Wifi (2).png" alt="Wifi image">
+                    <img src="./images/Rectangle (1).png" alt="Battery image">
                 </div>
             </div>
         </header>
         <section class="w-[358px] m-auto">
             <div class="mt-10 flex">
-                <img src="./images/keyboard_backspace.png" alt="Arrow blck image">
-                <p class="text-[14px] text-white font-notmal uppercase ml-[20px] tracking-[1.5px]">filter classes</p>
+                <img src="./images/Vector (10).png" alt="Arrow blck image" class="w-[11px] h-[7px] mt-[8px]">
+                <p class="text-[14px] text-[#333333] font-bold uppercase ml-[20px] tracking-[1.5px]">filter classes</p>
             </div>
         </section>
 
         <section class="mt-[20px]">
-                <div class="w-full h-[58px] bg-[#525252]">
-                    <p class="text-[16px] text-white leading-[15px] ml-[16px] mt-[10px] absolute">Intro <br> <span class="text-[14px] font-notmal">20s</span></p>
+                <div class="w-full h-[58px] bg-[#f2f2f2]">
+                    <p class="text-[16px] text-[#333333] leading-[15px] ml-[16px] mt-[10px] absolute font-bold">Intro <br> <span class="text-[14px] font-notmal">20s</span></p>
                 </div>
-                <div class="w-full h-[58px] bg-[#525252] w-[358px] m-auto">
+                <div class="w-full h-[58px] bg-[#f2f2f2] w-[358px] m-auto">
                     <div class="w-[358px] m-auto flex justify-between">
-                        <p class="text-[16px] text-white leading-[15px] mt-[10px]">Warm up <br> <span class="text-[14px] font-notmal">1min 30s</span></p>
-                        <img src="./images/Vector (7).png" alt="" class="w-[11px] h-[7px] mt-[20px]">
+                        <p class="text-[16px] text-[#333333] leading-[15px] mt-[10px] font-bold">Warm up <br> <span class="text-[14px] font-notmal">1min 30s</span></p>
+                        <img src="./images/Vector (9).png" alt="" class="w-[11px] h-[7px] mt-[20px]">
                     </div>
                 </div>
                 <div class="text-[#ffffff] flex w-[358px] m-auto mt-[30px] justify-between">
                     <div class="flex">
-                        <div class="w-[5px] h-[5px] rounded-full bg-[#ffffff] mt-[10px] ml-[10px]"></div>
-                        <p class="ml-[10px]">Slow Walkout / Overhead Reach</p>
+                        <div class="w-[5px] h-[5px] rounded-full bg-[#333333] mt-[10px] ml-[10px]"></div>
+                        <p class="ml-[10px] text-[#333333]">Slow Walkout / Overhead Reach</p>
                     </div>
                     <div>
-                        <p class="text-white">30s</p>
+                        <p class="text-[#333333]">30s</p>
                     </div>
                 </div>
-                <hr class="w-[358px] m-auto mt-[25px] opacity-[0.3]">
+                <hr class="w-[358px] h-[2px]  m-auto mt-[25px] opacity-[1]">
 
                 <div class="text-[#ffffff] flex w-[358px] m-auto mt-[30px] justify-between">
                     <div class="flex">
-                        <div class="w-[5px] h-[5px] rounded-full bg-[#ffffff] mt-[10px] ml-[10px]"></div>
-                        <p class="ml-[10px]">Dynamic Spiderman</p>
+                        <div class="w-[5px] h-[5px] rounded-full bg-[#333333] mt-[10px] ml-[10px]"></div>
+                        <p class="ml-[10px] text-[#333333]">Dynamic Spiderman</p>
                     </div>
                     <div>
-                        <p class="text-white">30s</p>
+                        <p class="text-[#333333]">30s</p>
                     </div>
                 </div>
-                <hr class="w-[358px] m-auto mt-[25px] opacity-[0.3]">
+                <hr class="w-[358px] m-auto mt-[25px] opacity-[1]">
 
-                <div class="text-[#ffffff] flex w-[358px] m-auto mt-[30px] justify-between">
+                <div class="text-[#333333] flex w-[358px] m-auto mt-[30px] justify-between">
                     <div class="flex">
-                        <div class="w-[5px] h-[5px] rounded-full bg-[#ffffff] mt-[10px] ml-[10px]"></div>
+                        <div class="w-[5px] h-[5px] rounded-full bg-[#333333] mt-[10px] ml-[10px]"></div>
                         <p class="ml-[10px]">Squat With Reach & Rotation</p>
                     </div>
                     <div>
-                        <p class="text-white">30s</p>
+                        <p class="text-[#333333]">30s</p>
                     </div>
                 </div>
 
-                <div class="w-full h-[58px] bg-[#3a595d] mt-[20px]">
+                <div class="w-full h-[58px] bg-[#b882d9] mt-[20px]">
                     <p class="text-[16px] text-white leading-[15px] ml-[16px] mt-[10px] absolute">Rest <br> <span class="text-[14px] font-notmal">30s</span></p>
                 </div>
 
-                <div class="w-full h-[58px] bg-[#525252] w-[358px] m-auto">
+                <div class="w-full h-[58px] bg-[#f2f2f2] w-[358px] m-auto">
                     <div class="w-[358px] m-auto flex justify-between">
-                        <p class="text-[16px] text-white leading-[15px] mt-[10px]">Workout <br> <span class="text-[14px] font-notmal">5min 50s</span></p>
-                        <img src="./images/Vector (6).png" alt="" class="w-[11px] h-[7px] mt-[25px]">
+                        <p class="text-[16px] text-[#333333] leading-[15px] mt-[10px]">Workout <br> <span class="text-[14px] font-notmal">5min 50s</span></p>
+                        <img src="./images/Vector (10).png" alt="" class="w-[11px] h-[7px] mt-[25px]">
                     </div>
                 </div>
 
-                <div class="w-full h-[58px] bg-[#3a595d]">
+                <div class="w-full h-[58px] bg-[#b882d9]">
                     <p class="text-[16px] text-white leading-[15px] ml-[16px] mt-[10px] absolute">Rest <br> <span class="text-[14px] font-notmal">30s</span></p>
                 </div>
 
-                <div class="w-full h-[58px] bg-[#525252] w-[358px] m-auto">
+                <div class="w-full h-[58px] bg-[#f2f2f2] w-[358px] m-auto">
                     <div class="w-[358px] m-auto flex justify-between">
-                        <p class="text-[16px] text-white leading-[15px] mt-[10px]">Stretch <br> <span class="text-[14px] font-notmal">5min 00s</span></p>
-                        <img src="./images/Vector (6).png" alt="" class="w-[11px] h-[7px] mt-[25px]">
+                        <p class="text-[16px] text-[#333333] leading-[15px] mt-[10px]">Stretch <br> <span class="text-[14px] font-notmal">5min 00s</span></p>
+                        <img src="./images/Vector (10).png" alt="" class="w-[11px] h-[7px] mt-[25px]">
                     </div>
                 </div>
 
-                <div class="w-full h-[58px] bg-[#3a595d]">
-                    <p class="text-[16px] text-white leading-[15px] ml-[16px] mt-[10px] absolute">Wrap up <br> <span class="text-[14px] font-notmal">30s</span></p>
+                <div class="w-full h-[58px] bg-[#b882d9]">
+                    <p class="text-[16px] text-white leading-[15px] ml-[16px] mt-[10px] absolute">Wrap up & end workout <br> <span class="text-[14px] font-notmal">30s</span></p>
                 </div>
         </section>
     </div>
