--- a/Mobile UL Kit 13/index.html
+++ b/Mobile UL Kit 13/index.html
@@ -31,7 +31,7 @@
         </header>
         <section class="w-[358px] m-auto">
             <div class="mt-10 flex">
-                <img src="./images/Vector (10).png" alt="Arrow blck image" class="w-[11px] h-[7px] mt-[8px]">
+                <img src="./images/Vector (11).png" alt="Arrow blck image" class=" h-[12px] mt-[5px]">
                 <p class="text-[14px] text-[#333333] font-bold uppercase ml-[20px] tracking-[1.5px]">filter classes</p>
             </div>
         </section>
