--- a/Mobile UL Kit 14/index.html
+++ b/Mobile UL Kit 14/index.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mobile UL/screens</title>
+     <!--=========== Meta tages ===========-->
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <!--=========== /Meta tages ===========-->
+     <!--=========== Tailwind css ===========-->
+     <script src="https://cdn.tailwindcss.com"></script>
+     <!--=========== /Tailwind css ===========-->
+     <!--=========== Title ===========-->
+     <title>Mobile UL/screens</title>
+     <!--=========== /Title ===========-->
 </head>
-<body>
-    
+<body class="text['Proxima Nova']">
+    <div class="w-[390px] h-[873px] m-auto bg-[#ffffff] mt-5 mb-5 rounded-[25px] border-[5px] border-[#d0d0d0]">
+        <header>
+            <div class="w-[358px] flex justify-between mt-4">
+                <div>
+                    <img src="./images/9_41.png" alt="Left Side image" class="ml-5">
+                </div>
+
+                <div class="w-[200px] h-8 bg-[#d0d0d0] rounded-b-[30px] mt-[-17px]"></div>
+
+                <div class="grid grid-cols-3 gap-[5px]">
+                    <img src="./images/Mobile Signal (3).png" alt="Mobile Signal image">
+                    <img src="./images/Wifi (2).png" alt="Wifi image">
+                    <img src="./images/Rectangle (1).png" alt="Battery image">
+                </div>
+            </div>
+        </header>
+        <section class="w-[358px] m-auto">
+            <div class="mt-10 flex">
+                <img src="./images/Vector (11).png" alt="Arrow blck image" class="h-[12px] mt-[5px]">
+                <p class="text-[14px] text-[#333333] font-bold uppercase ml-[20px] tracking-[1.5px]">all classes</p>
+            </div>
+        </section>
+
+      
+    </div>
 </body>
 </html>
