--- a/Mobile UL Kit 14/index.html
+++ b/Mobile UL Kit 14/index.html
@@ -34,6 +34,31 @@
                 <img src="./images/Vector (11).png" alt="Arrow blck image" class="h-[12px] mt-[5px]">
                 <p class="text-[14px] text-[#333333] font-bold uppercase ml-[20px] tracking-[1.5px]">all classes</p>
             </div>
+
+            <div class="mt-[30px]">
+                <button class="w-[357px] h-[44px] bg-[#000000] text-white">Find you next class</button>
+            </div>
+        </section>
+
+        <section class="w-[358px] m-auto mt-[30px]">
+            <div class="flex justify-between">
+                <p class="text-[18px] font-bold">Coaches</p>
+                <ins class="text-[14px] font-normal mt-[4px]">See all</ins>
+            </div>
+            <div>
+                <div>
+                    <img src="" alt="">
+                    <p></p>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <p></p>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <p></p>
+                </div>
+            </div>
         </section>
 
       
