mobile ul kit 14 finish

--- a/Mobile UL Kit 14/index.html
+++ b/Mobile UL Kit 14/index.html
@@ -40,27 +40,51 @@
             </div>
         </section>
 
-        <section class="w-[358px] m-auto mt-[30px]">
+        <section class="w-[358px] m-auto mt-[25px]">
             <div class="flex justify-between">
                 <p class="text-[18px] font-bold">Coaches</p>
                 <ins class="text-[14px] font-normal mt-[4px]">See all</ins>
             </div>
-            <div>
+            <div class="flex justify-between mt-[10px]">
                 <div>
-                    <img src="" alt="">
-                    <p></p>
+                    <img src="./images/Rectangle 308.png" alt="">
+                    <p class="text-[16px] font-normal ml-[50px] mt-[5px]">Zev</p>
                 </div>
                 <div>
-                    <img src="" alt="">
-                    <p></p>
+                    <img src="./images/Rectangle 310.png" alt="">
+                    <p class="text-[16px] font-normal ml-[50px] mt-[5px]">Dant</p>
                 </div>
                 <div>
-                    <img src="" alt="">
-                    <p></p>
+                    <img src="./images/Rectangle 311.png" alt="">
+                    <p class="text-[16px] font-normal ml-[50px] mt-[5px]">Roger</p>
                 </div>
+            </div>
+
+            <div class="flex justify-between mt-[35px]">
+                <p class="text-[18px] font-bold">Workout types</p>
+                <ins class="text-[14px] font-normal mt-[4px]">See all</ins>
+            </div>
+
+            <div class="grid grid-cols-2 gap-x-[10px] gap-y-[15px] mt-[4px]">
+                <img src="./images/Frame 1266.png" alt="">
+                <img src="./images/Frame 1269.png" alt="">
+                <img src="./images/Frame 1267.png" alt="">
+                <img src="./images/Frame 1270.png" alt="">
+                <img src="./images/Frame 1268.png" alt="">
+                <img src="./images/Frame 1271.png" alt="">
+                <img src="./images/Frame 1272.png" alt="">
+                <img src="./images/Frame 1273.png" alt="">
             </div>
         </section>
 
+        <footer class="absolute w-[380px] m-auto h-[60px] bg-[#000000] rounded-b-[25px] mt-[-56px]">
+            <div class="flex justify-around mt-[20px]">
+                <img src="./images/calendar_today.png" alt="">
+                <img src="./images/Vector (12).png" alt="">
+                <img src="./images/Group (1).png" alt="">
+                <img src="./images/Vector (13).png" alt="">
+            </div>
+        </footer>
       
     </div>
 </body>
