--- a/Mobile UL Kit 15/index.html
+++ b/Mobile UL Kit 15/index.html
@@ -13,31 +13,32 @@
      <!--=========== /Title ===========-->
 </head>
 <body>
-    <div class="w-[390px] h-[873px] m-auto bg-neutral-900 mt-5 mb-5 rounded-[25px] border-[5px] border-[#d0d0d0]">
+    <div class="w-[390px] h-[873px] m-auto bg-[#ffffff ] mt-5 mb-5 rounded-[25px] border-[5px] border-[#d0d0d0]">
         <header>
             <div class="w-[358px] flex justify-between mt-4">
                 <div>
-                    <img src="./images/Left Side.png" alt="Left Side image" class="ml-5">
+                    <img src="./images/9_41.png" alt="Left Side image" class="ml-5">
                 </div>
 
                 <div class="w-[200px] h-8 bg-[#d0d0d0] rounded-b-[30px] mt-[-17px] "></div>
 
                 <div class="grid grid-cols-3 ">
-                    <img src="./images/Mobile Signal.png" alt="Mobile Signal image">
-                    <img src="./images/Wifi.png" alt="Wifi image">
-                    <img src="./images/Battery.png" alt="Battery image">
+                    <img src="./images/Mobile Signal (3).png" alt="Mobile Signal image">
+                    <img src="./images/Wifi (2).png" alt="Wifi image">
+                    <img src="./images/Rectangle (1).png" alt="Battery image">
                 </div>
             </div>
         </header>
         <section class="w-[358px] m-auto">
-            <div class="mt-16">
-                <img src="./images/keyboard_backspace.png" alt="Arrow blck image">
+            <div class="mt-10">
+                <img src="./images/Vector (14).png" alt="Arrow blck image">
             </div>
         </section>
         <section>
             <div class="mt-3">
-                <h1 class="text-[48px] text-white font-bold absolute leading-[40px] ml-[105px] mt-[150px] font-[Pridi]">Joseph <br> Dickson</h1>
-                <img src="./images/Rectangle 304.png" alt="">
+                <h1 class="text-[32px] text-white font-bold absolute leading-[40px] ml-[24px] mt-[150px] font-[Proxima Nova]">AFTERNOOON BREAK</h1>
+                <p class="text-white text-[18px] absolute ml-[120px] mt-[190px]">with @Kim Green</p>
+                <img src="./images/Rectangle 304 (1).png" alt="">
             </div>
             <div class="w-[358px] m-auto mt-[15px]">
                 <p class="text-[20px] text-white font-bold">About</p>
