--- a/Mobile UL Kit 18/index.html
+++ b/Mobile UL Kit 18/index.html
@@ -38,6 +38,13 @@
             <div class="mt-[100px]">
                 <p class="text-[24px] font-normal font-['Proxima Nova'] text-center">Select your goals you wish <br> to accomplish</p>
             </div>
+
+            <div>
+                <img src="./images/Frame 1282.png" alt="">
+                <img src="./images/Frame 1279.png" alt="">
+                <img src="./images/Frame 1280.png" alt="">
+                <img src="./images/Frame 1281.png" alt="">
+            </div>
         </section>
     </div>
 </body>
