--- a/Mobile UL Kit 18/index.html
+++ b/Mobile UL Kit 18/index.html
@@ -39,9 +39,9 @@
                 <p class="text-[24px] font-normal font-['Proxima Nova'] text-center">Select your goals you wish <br> to accomplish</p>
             </div>
 
-            <div>
+            <div class="grid grid-cols-2 mt-[30px] ml-[30px] gap-y-[30px] w-[358px] m-auto">
                 <img src="./images/Frame 1282.png" alt="">
-                <img src="./images/Frame 1279.png" alt="">
+                <img src="./images/Frame 1279.png" alt="" class="mt-[8px]">
                 <img src="./images/Frame 1280.png" alt="">
                 <img src="./images/Frame 1281.png" alt="">
             </div>
