--- a/Mobile UL Kit 16/index.html
+++ b/Mobile UL Kit 16/index.html
@@ -31,12 +31,12 @@
         </header>
         <section class="mt-[30px]">
             <div>
-                <img src="./images/Line 163.png" alt="" class="absolute">
+                <img src="./images/Line 163 (1).png" alt="" class="absolute">
                 <img src="./images/Line 162.png" alt="">
             </div>
 
-            <div class="mt-[100px]">
-                <p class="text-[24px] font-normal font-['Proxima Nova'] text-center">Select your goals you wish <br> to accomplish</p>
+            <div class="mt-[180px]">
+                <p class="text-[24px] font-normal font-['Proxima Nova'] text-center">What’s your first name?</p>
             </div>
 
             <div class="grid grid-cols-2 mt-[40px] ml-[30px] gap-y-[30px] w-[358px] m-auto">
