mobile ul kit 16 finish

--- a/Mobile UL Kit 16/index.html
+++ b/Mobile UL Kit 16/index.html
@@ -45,7 +45,16 @@
                 <img src="./images/Frame 1280.png" alt="">
                 <img src="./images/Frame 1281.png" alt="">
             </div>
+
+            <div  class="flex justify-center mt-[60px]">
+                <img src="./images/Line 164.png" alt="" class="mt-[10px]">
+                <p class="text-[64px] font-extralight text-[#a8a8a8]">name</p>
+            </div>
         </section>
+
+        <footer class="mt-[90px]">
+            <img src="./images/Android keyboard.png" alt="" class="rounded-b-[25px]">
+        </footer>
     </div>
 </body>
 </html>
