--- a/Mobile UL Kit 15/index.html
+++ b/Mobile UL Kit 15/index.html
@@ -22,7 +22,7 @@
 
                 <div class="w-[200px] h-8 bg-[#d0d0d0] rounded-b-[30px] mt-[-17px] "></div>
 
-                <div class="grid grid-cols-3 ">
+                <div class="grid grid-cols-3 gap-[8px]">
                     <img src="./images/Mobile Signal (3).png" alt="Mobile Signal image">
                     <img src="./images/Wifi (2).png" alt="Wifi image">
                     <img src="./images/Rectangle (1).png" alt="Battery image">
@@ -30,8 +30,9 @@
             </div>
         </header>
         <section class="w-[358px] m-auto">
-            <div class="mt-10">
-                <img src="./images/Vector (14).png" alt="Arrow blck image">
+            <div class="mt-10 flex">
+                <img src="./images/Vector (14).png" alt="Arrow blck image" class="w-[25px] h-[15px]">
+                <p class="uppercase text-[14px] font-semibold ml-[20px] mt-[-3px] tracking-[2px]">i feel gooood</p>
             </div>
         </section>
         <section>
