--- a/Mobile UL Kit 15/index.html
+++ b/Mobile UL Kit 15/index.html
@@ -29,39 +29,24 @@
                 </div>
             </div>
         </header>
-        <section class="w-[358px] m-auto">
+        <section class="w-[358px] m-auto flex justify-between">
             <div class="mt-10 flex">
                 <img src="./images/Vector (14).png" alt="Arrow blck image" class="w-[25px] h-[15px]">
                 <p class="uppercase text-[14px] font-semibold ml-[20px] mt-[-3px] tracking-[2px]">i feel gooood</p>
             </div>
+            <div class="mt-[35px]">
+                <img src="./images/Vector (15).png" alt="">
+            </div>
         </section>
         <section>
-            <div class="mt-3">
+            <div class="mt-7">
+                <img src="./images/heart_outline.png" alt="" class="absolute mt-[15px] ml-[350px]">
                 <h1 class="text-[32px] text-white font-bold absolute leading-[40px] ml-[24px] mt-[150px] font-[Proxima Nova]">AFTERNOOON BREAK</h1>
                 <p class="text-white text-[18px] absolute ml-[120px] mt-[190px]">with @Kim Green</p>
                 <img src="./images/Rectangle 304 (1).png" alt="">
             </div>
-            <div class="w-[358px] m-auto mt-[15px]">
-                <p class="text-[20px] text-white font-bold">About</p>
-                <p class="text-[15px] text-white font-notmal font-['Proxima Nova'] leading-[22px] mt-[7px]">Lorem ipsum dolor sit amet, consectetur adipiscing <br> elit. Ornare lacus enim enim tincidunt. Dictumst <br> duis volutpat maecenas sed purus at <br> tellus at. Purus magna lacus. </p>
-            </div>
-            <div class="w-[358px] m-auto mt-[30px]">
-                <p class="text-[20px] text-white font-bold">Classes</p>
-                <div class="text-white text-[14px] flex justify-around mt-[30px]">
-                    <p>10 min</p>
-                    <p>25 min</p>
-                    <p>40 min</p>
-                    <p>60 min</p>
-                </div>
-                <div class="mt-[5px]">
-                    <img src="./images/Line 157.png" alt="">
-                </div>
-            </div>
-            <footer class="mt-[11px]">
-                <div>
-                    <img src="./images/Rectangle 305.png" alt="" class="rounded-b-[20px]">
-                </div>
-            </footer>
+            
+           
         </section>
     </div>
 </body>
