addad file finish

--- a/Mobile UL Kit 15/index.html
+++ b/Mobile UL Kit 15/index.html
@@ -13,7 +13,7 @@
      <!--=========== /Title ===========-->
 </head>
 <body>
-    <div class="w-[390px] h-[873px] m-auto bg-[#ffffff ] mt-5 mb-5 rounded-[25px] border-[5px] border-[#d0d0d0]">
+    <div class="w-[390px] h-[873px] m-auto bg-[#ffffff] mt-5 mb-5 rounded-[25px] border-[5px] border-[#d0d0d0]">
         <header>
             <div class="w-[358px] flex justify-between mt-4">
                 <div>
@@ -46,7 +46,43 @@
                 <img src="./images/Rectangle 304 (1).png" alt="">
             </div>
             
-           
+           <div class="flex w-[348px] m-auto">
+                <div class="flex ml-[0px] mt-[18px]">
+                    <img src="./images/Ellipse 175.png" alt="">
+                    <img src="./images/Ellipse 176.png" alt="" class="absolute ml-[20px]">
+                    <img src="./images/Ellipse 177.png" alt="" class="absolute ml-[40px]">
+                </div>
+                <div class="ml-[45px] mt-[20px]">
+                    <p class="text-[14px] font-bold">10.6k <span class="font-normal">joined before</span></p>
+                </div>
+           </div>
+
+           <div class="w-[348px] m-auto mt-[25px]">
+                <p class="font-bold text-[24px]">Class details</p>
+           </div>
+           <div class="w-[348px] m-auto">
+                <div class="flex mt-[10px]">
+                    <p class="text-[14px] font-bold">Exercise type:</p>
+                    <p class="text-[14px] font-normal ml-[72px] mt-[2px]">Cardio</p>
+                </div>
+                <div class="flex mt-[10px]">
+                    <p class="text-[14px] font-bold">Level:</p>
+                    <p class="text-[14px] font-normal ml-[123px] mt-[2px]">Beginners</p>
+                </div>
+                <div class="flex mt-[10px]">
+                    <p class="text-[14px] font-bold">Target area:</p>
+                    <p class="text-[14px] font-normal ml-[83px] mt-[2px]">Full body</p>
+                </div>
+                <div class="flex mt-[10px]">
+                    <p class="text-[14px] font-bold">Target body area:</p>
+                    <p class="text-[14px] font-normal ml-[45px] mt-[2px]">Full body</p>
+                </div>
+           </div>
+
+           <div class="w-[348px] m-auto mt-[10px]">
+                <button class="w-full h-[44px] text-[16px] text-[#ffffff] font-semibold bg-[#3a595d] rounded-[60px]">Start class</button>
+                <button class="w-full h-[44px] text-[16px] text-[#3a595d] font-semibold border-[1px] border-[#3a595d] rounded-[60px] mt-[10px]">Create group class</button>
+           </div>
         </section>
     </div>
 </body>
